fix ie height display

--- a/Qc.SampleauthSdk/login.html
+++ b/Qc.SampleauthSdk/login.html
@@ -11,7 +11,7 @@
         .main_content{float:none;margin-right:auto;margin-left:auto;padding:10px 50px;border-radius:8px;background-color:#fff;text-align:left}
         .form-group{position:relative}
         .login_btn{position:relative;left:50%;display:block;margin-left:-50px;width:100px;border:none;border-radius:3px;background:#409eff;color:#fff;font-size:15px;line-height:40px;cursor:pointer}
-        .login_input{margin:5px;padding-left:5px;width:100%;border:1px solid #04bfb4;border-radius:3px;background:0 0;color:#1e1e1e;line-height:40px}
+        .login_input{margin:5px;padding-left:5px;width:100%;border:1px solid #04bfb4;border-radius:3px;background:0 0;color:#1e1e1e;line-height:40px;height:40px;}
         .icon_font{position:absolute;left:-20px;color:#04bfb4;font-size:18px}
         .font16{font-size:16px}
         .mg-t20{margin-top:20px}
